--- a/templates/assignment11_outerSource.html
+++ b/templates/assignment11_outerSource.html
@@ -5,14 +5,14 @@
 {% block tochen %}
 <h1> Outer Source</h1>
 
-    <h2> Request Frontend</h2>
+    <h2> Request Frontend:</h2>
         <input type="number" name="number_frontend" id="id">
         <input type="submit" value="Get User" onclick="getUsers()">
     <main>
 
     </main>
 
-    <h2> Request Backend</h2>
+    <h2> Request Backend:</h2>
         <form action="/assignment11/outer_source">
             <input type="number" name="number_backend" required>
             <input type="submit" value="Get User">
